--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,58 @@
-dist: trusty
-sudo: false
-language: java
-before_install:
-  - ulimit -c unlimited -S
-script:
-  - ./mvnw test -B
-  - ./mvnw site -pl docs -B
 after_success:
-  - bash .travis_after_success.sh
+- bash .travis_after_success.sh
+before_cache:
+- rm -rf $HOME/CACHE; find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do
+  du -sh $line;         DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line
+  $DIR; done
+- echo CACHESIZE $(du -sk $HOME/CACHE)
+- cp /tmp/classpathFile $HOME/CACHE/classpathFile
+before_install:
+- if [ "$TRAVIS_OS_NAME" == "osx" ];        then sed -i '' 's/<gib.enabled>true/<gib.enabled>false/'
+  $TRAVIS_BUILD_DIR/pom.xml;        else sed -i 's/<gib.enabled>true/<gib.enabled>false/'
+  $TRAVIS_BUILD_DIR/pom.xml;        fi
+- find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
+- ulimit -c unlimited -S
+before_script:
+- find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do rm -rf $line; done
+- find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
+- if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -i '' 's/<gib.enabled>false/<gib.enabled>true/'
+  $TRAVIS_BUILD_DIR/pom.xml;    else sed -i 's/<gib.enabled>false/<gib.enabled>true/'
+  $TRAVIS_BUILD_DIR/pom.xml;    fi
+- if [[ -e $HOME/CACHE/classpathFile ]]; then cp $HOME/CACHE/classpathFile /tmp/;
+  fi
 cache:
   directories:
-    - $HOME/.m2
-
-matrix:
-  include:
-    - os: linux
-      jdk: oraclejdk8
-      addons:
-        apt:
-          packages:
-            - oracle-java8-installer
-    - os: linux
-      jdk: oraclejdk9
-      addons:
-        apt:
-          packages:
-            - oracle-java9-installer
-
-# encrypted CI_DEPLOY_USERNAME and CI_DEPLOY_PASSWORD
-# values for maven deploy. these have been encrypted
-# with the public key from https://github.com/dropwizard/dropwizard
-# and won't work in any other repository. if you want
-# to run CI in your local fork you'll need to run `travis encrypt ...`
-# accordingly (http://docs.travis-ci.com/user/encryption-keys/)
-#
-# NOTE: CI_DEPLOY_USERNAME is set to dropwizardci, the username
-# we've set up with Sonatype, which only has permission to push
-# to the snapshot repo.
+  - $HOME/.m2
+  - $HOME/CACHE
+dist: trusty
 env:
   global:
-    - secure: "EAuz7bCKj4r438IEC2y73WVrFwXirflbXA4HhpwVmAFWNqC9LIIpkWcO5GVp773HsZvJBcJjJriP+aKRkImV8AyMgjCeEUv2dlezvbkIIz38vKyw9MWaPIyZ3uS9RCuL7OwGf5BeJ1DvHFYdMBaspZd+EmCYr7abnHdqs+Tm/W8="
-    - secure: "RI0QcuKMsij3sgRm+Bjhu3X217U6UslvSzcRv13iLLwrTj73zhGi5PF/+kj8Qh1HMQw0oQRR6M8qPqGy82KcjiGbpgPgSy1rVAvkYg+Yw1k7v4l7Vgyj7TNsAM3pqHyojx2jgRjpQsgw/WXQmiahWV6OCOUzdbhEUwVzIXI+vtk="
-    - JAVA_OPTS: "'-Xms512m -Xmx2g'"
+  - secure: EAuz7bCKj4r438IEC2y73WVrFwXirflbXA4HhpwVmAFWNqC9LIIpkWcO5GVp773HsZvJBcJjJriP+aKRkImV8AyMgjCeEUv2dlezvbkIIz38vKyw9MWaPIyZ3uS9RCuL7OwGf5BeJ1DvHFYdMBaspZd+EmCYr7abnHdqs+Tm/W8=
+  - secure: RI0QcuKMsij3sgRm+Bjhu3X217U6UslvSzcRv13iLLwrTj73zhGi5PF/+kj8Qh1HMQw0oQRR6M8qPqGy82KcjiGbpgPgSy1rVAvkYg+Yw1k7v4l7Vgyj7TNsAM3pqHyojx2jgRjpQsgw/WXQmiahWV6OCOUzdbhEUwVzIXI+vtk=
+  - JAVA_OPTS: '''-Xms512m -Xmx2g'''
+language: java
+matrix:
+  include:
+  - addons:
+      apt:
+        packages:
+        - oracle-java8-installer
+    jdk: oraclejdk8
+    os: linux
+  - addons:
+      apt:
+        packages:
+        - oracle-java9-installer
+    jdk: oraclejdk9
+    os: linux
+script:
+- touch /tmp/NOW
+- echo GIBSTUDYSTART $(date)
+- ./mvnw test -B
+- ./mvnw site -pl docs -B
+- echo GIBSTUDYEND $(date)
+- cd $TRAVIS_BUILD_DIR
+- echo TESTNUM $(find . -name TEST-*.xml -newer /tmp/NOW | wc -l)
+sudo: false
