--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <prerequisites>
-        <maven>3.0.1</maven>
-    </prerequisites>
 
     <groupId>io.dropwizard</groupId>
     <artifactId>dropwizard-parent</artifactId>
-    <version>1.3.0-rc5-SNAPSHOT</version>
+    <version>1.3.0-rc7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Dropwizard Project</name>
@@ -58,12 +54,24 @@
         <dropwizard.url>http://www.dropwizard.io/${project.version}</dropwizard.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
-        <junit.version>4.12.2</junit.version>
-        <junit5.version>5.0.2</junit5.version>
-        <assertj.version>3.8.0</assertj.version>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+        <maven.compiler.optimize>false</maven.compiler.optimize>
+        <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
+
+        <junit.version>4.12.3</junit.version>
+        <junit5.version>5.0.3</junit5.version>
+        <assertj.version>3.9.0</assertj.version>
         <mockito.version>2.13.0</mockito.version>
+    <gib.commitRange>${env.TRAVIS_COMMIT_RANGE}</gib.commitRange>
+        <gib.enabled>true</gib.enabled>
+        <gib.useEkstazi>true</gib.useEkstazi>
+        <gib.excludePathRegex>(.*\.apt$)|(.*\.txt$)|(.*\.md$)|(.*\.html$)|(.*\.rst$)|(.*\.scss$)|(.*\.css$)|(.*\.png$)|(.*\.py$)|(.*README$)|(.*README\.*)|(.*\.jpg$)|(.*\.jpeg$)|(.*NOTICE$)|(.*\.git.*$)|(site.xml)|(index.xml)|(checkstyle.xml)</gib.excludePathRegex>
+        <gib.classpathFile>/tmp/classpathFile</gib.classpathFile>
     </properties>
 
     <developers>
@@ -185,7 +193,7 @@
         <connection>scm:git:git://github.com/dropwizard/dropwizard.git</connection>
         <developerConnection>scm:git:git@github.com:dropwizard/dropwizard.git</developerConnection>
         <url>https://github.com/dropwizard/dropwizard</url>
-        <tag>v1.3.0-rc3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
@@ -260,6 +268,9 @@
                     <value>true</value>
                 </property>
             </activation>
+            <properties>
+                <maven.compiler.optimize>true</maven.compiler.optimize>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -283,11 +294,12 @@
             <id>dev</id>
             <properties>
                 <maven.javadoc.skip>true</maven.javadoc.skip>
-                <findbugs.skip>true</findbugs.skip>
+                <maven.source.skip>true</maven.source.skip>
             </properties>
             <build>
                 <plugins>
                     <!-- Run tests in parallel in the dev mode-->
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -314,11 +326,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                            <optimize>true</optimize>
                             <debug>true</debug>
-                            <showWarnings>true</showWarnings>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -338,20 +346,15 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                            <optimize>true</optimize>
                             <debug>true</debug>
                             <compilerId>javac-with-errorprone</compilerId>
-                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                            <showWarnings>true</showWarnings>
                             <fork>true</fork>
                             <annotationProcessorPaths>
                                 <!-- enable extended nullability checks -->
                                 <path>
                                     <groupId>com.uber.nullaway</groupId>
                                     <artifactId>nullaway</artifactId>
-                                    <version>0.1.7</version>
+                                    <version>0.3.2</version>
                                 </path>
                             </annotationProcessorPaths>
                             <compilerArgs>
@@ -370,7 +373,7 @@
                             <dependency>
                                 <groupId>com.google.errorprone</groupId>
                                 <artifactId>error_prone_core</artifactId>
-                                <version>2.1.2</version>
+                                <version>2.2.0</version>
                             </dependency>
                         </dependencies>
                     </plugin>
@@ -388,12 +391,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <source>9</source>
-                            <target>9</target>
-                            <optimize>true</optimize>
                             <debug>true</debug>
-                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                            <showWarnings>true</showWarnings>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -486,7 +484,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -523,7 +521,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.6</version>
+                    <version>3.7</version>
                 </plugin>
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
@@ -538,7 +536,7 @@
                 <plugin>
                     <groupId>kr.motd.maven</groupId>
                     <artifactId>sphinx-maven-plugin</artifactId>
-                    <version>1.6.1</version>
+                    <version>1.7.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -559,7 +557,7 @@
                         <id>enforce</id>
                         <configuration>
                             <rules>
-                                <DependencyConvergence />
+                                <DependencyConvergence/>
                                 <bannedDependencies>
                                     <excludes>
                                         <!-- This should not exist as it will force SLF4J calls to be delegated to log4j -->
@@ -596,7 +594,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <additionalparam>${javadoc.doclint.none}</additionalparam>
+                    <doclint>none</doclint>
                     <quiet>true</quiet>
                 </configuration>
                 <executions>
@@ -659,7 +657,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
+                <version>3.0.0</version>
                 <configuration>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
@@ -677,6 +675,13 @@
                 </executions>
             </plugin>
         </plugins>
+    <extensions>
+            <extension>
+                <groupId>edu.illinois</groupId>
+                <artifactId>incremental-builder-with-ekstazi</artifactId>
+                <version>3.5.3</version>
+            </extension>
+        </extensions>
     </build>
 
     <reporting>
@@ -711,7 +716,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <additionalparam>${javadoc.doclint.none}</additionalparam>
+                    <doclint>none</doclint>
                     <quiet>true</quiet>
                 </configuration>
                 <reportSets>
@@ -726,3 +731,4 @@
         </plugins>
     </reporting>
 </project>
+
