45864daa19a5905aa765fb818ce3fede77bba1c7 replay gib_eks

--- a/dropwizard-hibernate/pom.xml
+++ b/dropwizard-hibernate/pom.xml
@@ -39,7 +39,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.github.arteam.jadira</groupId>
+            <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
         </dependency>
         <dependency>
