--- a/dropwizard-bom/pom.xml
+++ b/dropwizard-bom/pom.xml
@@ -105,9 +105,9 @@
                 <version>${h2.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.arteam.jadira</groupId>
+                <groupId>org.jadira.usertype</groupId>
                 <artifactId>usertype.core</artifactId>
-                <version>6.0.1.GA-jdk9</version>
+                <version>7.0.0.CR1</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
