a4d488a91b4dd40e6f83c86b0b475bfb7eae8e4a replay gib_eks

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ matrix:
 script:
 - touch /tmp/NOW
 - echo GIBSTUDYSTART $(date)
-- ./mvnw test -B
+- ./mvnw test -B -P code-coverage
 - ./mvnw site -pl docs -B
 - echo GIBSTUDYEND $(date)
 - cd $TRAVIS_BUILD_DIR
