--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <maven.compiler.optimize>false</maven.compiler.optimize>
         <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
+        <argLine>-Duser.language=en -Duser.region=US</argLine>
 
         <junit.version>4.12.3</junit.version>
         <junit5.version>5.0.3</junit5.version>
@@ -381,6 +382,9 @@
             <activation>
                 <jdk>9</jdk>
             </activation>
+            <properties>
+                <argLine>-Duser.language=en -Duser.region=US --add-modules java.xml.bind</argLine>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -390,18 +394,14 @@
                             <debug>true</debug>
                         </configuration>
                     </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>-Duser.language=en -Duser.region=US --add-modules java.xml.bind</argLine>
-                        </configuration>
-                    </plugin>
                 </plugins>
             </build>
         </profile>
         <profile>
             <id>code-coverage</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -421,13 +421,6 @@
                                 <exclude>io/dropwizard/benchmarks/**/*.class</exclude>
                                 <exclude>org/openjdk/jmh/**/*.class</exclude>
                             </excludes>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>${argLine} -Duser.language=en -Duser.region=US</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -571,13 +564,6 @@
         </pluginManagement>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Duser.language=en -Duser.region=US</argLine>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
